[package]
name = "splendor"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core_mechanics"]

[dependencies]
core_mechanics = { path = "./core_mechanics", features = ["original-game"] }

anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
data-encoding = "2.8.0"
futures-lite = "2.6.0"
iroh = "0.34.0"
iroh-gossip = "0.34.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.2"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
