[package]
name = "core_mechanics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
original-game = ["rand"]
